infrastructure/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: http
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway 
  servers:
  - hosts:
    - "*"
    port:
      number: 80
      name: http
      protocol: HTTP
