infrastructure/main-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: main
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*.atoy.lol'
    port:
      name: http-isticon
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: true
  - hosts:
    - '*.atoy.lol'
    port:
      name: https-istiocon
      number: 443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: main-cert
