infrastructure/keycloak.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: keycloak
  namespace: istio-system
spec:
  selector:
    istio: keycloak
  servers:
  - hosts:
    - 'keycloak.istiocon.xyz'
    port:
      name: http-passthrough
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: true
  - hosts:
    - 'keycloak.istiocon.xyz'
    port:
      name: https-passthrough
      number: 443
      protocol: HTTPS
    tls:
      mode: PASSTHROUGH
---
kind: Namespace
apiVersion: v1
metadata:
  name: keycloak
  labels:
    app: keycloak
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app: keycloak
    version: "latest"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
        version: "latest"
    spec:
      containers:
      - name: keycloak
        image: jboss/keycloak
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: certs
          mountPath: "/etc/x509/https"
      volumes:
      - name: certs
        secret:
          secretName: main-cert
          defaultMode: 0755
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: keycloak
spec:
  selector:
    app: keycloak
  ports:
    - protocol: TCP
      name: https
      port: 8443
      targetPort: 8443
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: keycloak-ingress
  namespace: keycloak
spec:
  hosts:
    - "keycloak.istiocon.xyz"
  gateways:
    - istio-system/keycloak
  http:
  - route:
    - destination:
        host: keycloak.keycloak.svc.cluster.local
  tls:
  - match:
    - port: 443
      sniHosts:
      - keycloak.istiocon.xyz
    route:
    - destination:
        host: keycloak.keycloak.svc.cluster.local
        port:
          number: 8443
---
apiVersion: v1
kind: Pod
metadata:
  name: postgres
  namespace: keycloak
  labels:
    app: postgres
spec:
  volumes:
    - name: postgres-storage
      persistentVolumeClaim:
        claimName: postgres-pvc
  containers:
    - name: postgres
      image: postgres
      ports:
        - containerPort: 5432
          name: "tcp-psql"
      volumeMounts:
        - mountPath: "/var/lib/postgresql/data"
          name: postgres-storage
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: keycloak
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      name: tcp
      port: 5432
      targetPort: 5432
