infrastructure/virtual-services.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-ingress
  namespace: istio-system
spec:
  hosts:
    - "kiali-istiocon.atoy.lol"
  gateways:
    - istio-system/istio-ingressgateway
  http:
  - route:
    - destination:
        host: kiali.istio-system.svc.cluster.local
        port:
          number: 20001
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-ingress
  namespace: istio-system
spec:
  hosts:
    - "grafana-istiocon.atoy.lol"
  gateways:
    - istio-system/istio-ingressgateway
  http:
  - route:
    - destination:
        host: grafana.istio-system.svc.cluster.local
        port:
          number: 3000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-ingress
  namespace: istio-system
spec:
  hosts:
    - "prometheus-istiocon.atoy.lol"
  gateways:
    - istio-system/istio-ingressgateway
  http:
  - route:
    - destination:
        host: prometheus.istio-system.svc.cluster.local
        port:
          number: 9090
